--- a/raster Zonal Statistics/zonalStats.ipynb
+++ b/raster Zonal Statistics/zonalStats.ipynb
@@ -1,6 +1,49 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "center-closer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "from rasterio.plot import show_hist\n",
+    "from rasterio.plot import show #To plot raster alone\n",
+    "import geopandas as gpd\n",
+    "import pandas as pd\n",
+    "import rasterstats\n",
+    "import rasterio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "incorporate-dynamics",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
