Notebook version of the same

--- a/raster Zonal Statistics/zonalStats.ipynb
+++ b/raster Zonal Statistics/zonalStats.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "several-sister",
+   "metadata": {},
+   "source": [
+    "## Calculating Zonal Statistics of Raster Using Python 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "center-closer",
+   "id": "improved-teacher",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +25,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "little-latex",
+   "metadata": {},
+   "source": [
+    "## Read the Districts shapefile and "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "incorporate-dynamics",
+   "id": "copyrighted-alliance",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Read the districts shapefile \n",
+    "districts = gpd.read_file(r'./Districts/districts.shp')\n",
+    "\n",
+    "# Read the rainfall raster of 2020-04-15\n",
+    "rf = rasterio.open(r'./Rainfall Data Rasters/2020-4-15.tif', mode = 'r')\n",
+    "rainFall = rasterio.open('Rainfall Data Rasters/2020-4-3.tif', mode='r')\n",
+    "show(rainFall) #This is to plot and show a single Raster as opened above"
+   ]
   }
  ],
  "metadata": {
