Notebook version of the same

--- a/raster Zonal Statistics/zonalStats.ipynb
+++ b/raster Zonal Statistics/zonalStats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "impressed-fifteen",
+   "id": "demanding-finder",
    "metadata": {},
    "source": [
     "## Calculating Zonal Statistics of Raster Using Python 3"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "baking-salmon",
+   "id": "dated-insight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defined-elements",
+   "id": "excessive-pierce",
    "metadata": {},
    "source": [
     "## Read the Districts shapefile and Rainfall Tifs from Local Disks"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "combined-translation",
+   "id": "alike-cabinet",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "physical-singer",
+   "id": "virgin-sender",
    "metadata": {},
    "source": [
     "## Plotting the raster and the districts shapefile together "
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "supreme-gateway",
+   "id": "rubber-provider",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,16 +96,46 @@
     "    show(rf, ax = ax1, title = 'Rainfall')\n",
     "    districts.plot(ax = ax1, facecolor = 'None', edgecolor = 'yellow')\n",
     "    show_hist(rf, title = 'Histogram', ax = ax2)\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    \n",
+    "    # Assign raster values to a numpy nd array\n",
+    "rainfall_array = rf.read(1)\n",
+    "affine = rf.transform"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adopted-survival",
+   "id": "systematic-zoning",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "latin-timber",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Calculating the zonal statistics \"\"\"\n",
+    "def calcZonalStats():\n",
+    "    avg_rf  = rasterstats.zonal_stats(\n",
+    "        districts, rainfall_array, affine = affine,\n",
+    "                                    stats = ['mean'], \n",
+    "                                    geojson_out = True)\n",
+    "\n",
+    "    # Extracting the average rainfall data from the list\n",
+    "    avg_rainfall = []\n",
+    "    i = 0\n",
+    "    while i < len(avg_rf):\n",
+    "        avg_rainfall.append(avg_rf[i]['properties'])\n",
+    "        i = i + 1 \n",
+    "\n",
+    "    # Transfering the infromation from the list to a pandas DataFrame\n",
+    "    avg_rf_portugal = pd.DataFrame(avg_rainfall)\n",
+    "    print(avg_rf_portugal)\n"
+   ]
   }
  ],
  "metadata": {
