Notebook version of the same

--- a/raster Zonal Statistics/zonalStats.ipynb
+++ b/raster Zonal Statistics/zonalStats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "southeast-flashing",
+   "id": "planned-orientation",
    "metadata": {},
    "source": [
     "## Calculating Zonal Statistics of Raster Using Python 3"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "pressed-stand",
+   "id": "developed-dictionary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "included-mistake",
+   "id": "serious-tactics",
    "metadata": {},
    "source": [
     "## Read the Districts shapefile and Rainfall Tifs from Local Disks"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "committed-efficiency",
+   "id": "worst-occurrence",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "preliminary-fiction",
+   "id": "official-bailey",
    "metadata": {},
    "source": [
     "## Plotting the raster and the districts shapefile together "
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "mounted-friendly",
+   "id": "viral-budget",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +104,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bizarre-henry",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(rainfall_array)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "circular-career",
+   "id": "japanese-stock",
+   "metadata": {},
+   "source": [
+    "### View the Rainfall Metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "nutritional-capability",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'driver': 'GTiff',\n",
+       " 'dtype': 'float32',\n",
+       " 'nodata': -9999.0,\n",
+       " 'width': 140,\n",
+       " 'height': 140,\n",
+       " 'count': 1,\n",
+       " 'crs': CRS.from_epsg(4326),\n",
+       " 'transform': Affine(0.0500000007451, 0.0, -11.0,\n",
+       "        0.0, -0.0500000007451, 43.0)}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf.meta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "yellow-browse",
    "metadata": {},
    "source": [
     "## Calculating the zonal statistics function"
@@ -114,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "nutritional-tuning",
+   "id": "million-slovenia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medieval-property",
+   "id": "documented-gates",
    "metadata": {},
    "source": [
     "### Calling The Plot and Calculate Functions"
@@ -148,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bearing-member",
+   "id": "tight-usage",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "technological-pharmacy",
+   "id": "assigned-packaging",
    "metadata": {},
    "outputs": [],
    "source": []
