--- a/4.zomatoRestaurants/Zomato_spatial.ipynb
+++ b/4.zomatoRestaurants/Zomato_spatial.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ZOMATO STORE SPATIAL ANALYSIS\n",
+    "- In this Spatial Data Analysis problem, we're going to analyse the [Zomato Food Delivery Store](https://www.zomato.com/ncr)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,220 +26,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>url</th>\n",
-       "      <th>address</th>\n",
-       "      <th>name</th>\n",
-       "      <th>online_order</th>\n",
-       "      <th>book_table</th>\n",
-       "      <th>rate</th>\n",
-       "      <th>votes</th>\n",
-       "      <th>phone</th>\n",
-       "      <th>location</th>\n",
-       "      <th>rest_type</th>\n",
-       "      <th>dish_liked</th>\n",
-       "      <th>cuisines</th>\n",
-       "      <th>approx_cost(for two people)</th>\n",
-       "      <th>reviews_list</th>\n",
-       "      <th>menu_item</th>\n",
-       "      <th>listed_in(type)</th>\n",
-       "      <th>listed_in(city)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>https://www.zomato.com/bangalore/jalsa-banasha...</td>\n",
-       "      <td>942, 21st Main Road, 2nd Stage, Banashankari, ...</td>\n",
-       "      <td>Jalsa</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>4.1/5</td>\n",
-       "      <td>775</td>\n",
-       "      <td>080 42297555\\r\\n+91 9743772233</td>\n",
-       "      <td>Banashankari</td>\n",
-       "      <td>Casual Dining</td>\n",
-       "      <td>Pasta, Lunch Buffet, Masala Papad, Paneer Laja...</td>\n",
-       "      <td>North Indian, Mughlai, Chinese</td>\n",
-       "      <td>800</td>\n",
-       "      <td>[('Rated 4.0', 'RATED\\n  A beautiful place to ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>Buffet</td>\n",
-       "      <td>Banashankari</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>https://www.zomato.com/bangalore/spice-elephan...</td>\n",
-       "      <td>2nd Floor, 80 Feet Road, Near Big Bazaar, 6th ...</td>\n",
-       "      <td>Spice Elephant</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>4.1/5</td>\n",
-       "      <td>787</td>\n",
-       "      <td>080 41714161</td>\n",
-       "      <td>Banashankari</td>\n",
-       "      <td>Casual Dining</td>\n",
-       "      <td>Momos, Lunch Buffet, Chocolate Nirvana, Thai G...</td>\n",
-       "      <td>Chinese, North Indian, Thai</td>\n",
-       "      <td>800</td>\n",
-       "      <td>[('Rated 4.0', 'RATED\\n  Had been here for din...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>Buffet</td>\n",
-       "      <td>Banashankari</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>https://www.zomato.com/SanchurroBangalore?cont...</td>\n",
-       "      <td>1112, Next to KIMS Medical College, 17th Cross...</td>\n",
-       "      <td>San Churro Cafe</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>3.8/5</td>\n",
-       "      <td>918</td>\n",
-       "      <td>+91 9663487993</td>\n",
-       "      <td>Banashankari</td>\n",
-       "      <td>Cafe, Casual Dining</td>\n",
-       "      <td>Churros, Cannelloni, Minestrone Soup, Hot Choc...</td>\n",
-       "      <td>Cafe, Mexican, Italian</td>\n",
-       "      <td>800</td>\n",
-       "      <td>[('Rated 3.0', \"RATED\\n  Ambience is not that ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>Buffet</td>\n",
-       "      <td>Banashankari</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>https://www.zomato.com/bangalore/addhuri-udupi...</td>\n",
-       "      <td>1st Floor, Annakuteera, 3rd Stage, Banashankar...</td>\n",
-       "      <td>Addhuri Udupi Bhojana</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>3.7/5</td>\n",
-       "      <td>88</td>\n",
-       "      <td>+91 9620009302</td>\n",
-       "      <td>Banashankari</td>\n",
-       "      <td>Quick Bites</td>\n",
-       "      <td>Masala Dosa</td>\n",
-       "      <td>South Indian, North Indian</td>\n",
-       "      <td>300</td>\n",
-       "      <td>[('Rated 4.0', \"RATED\\n  Great food and proper...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>Buffet</td>\n",
-       "      <td>Banashankari</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>https://www.zomato.com/bangalore/grand-village...</td>\n",
-       "      <td>10, 3rd Floor, Lakshmi Associates, Gandhi Baza...</td>\n",
-       "      <td>Grand Village</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>3.8/5</td>\n",
-       "      <td>166</td>\n",
-       "      <td>+91 8026612447\\r\\n+91 9901210005</td>\n",
-       "      <td>Basavanagudi</td>\n",
-       "      <td>Casual Dining</td>\n",
-       "      <td>Panipuri, Gol Gappe</td>\n",
-       "      <td>North Indian, Rajasthani</td>\n",
-       "      <td>600</td>\n",
-       "      <td>[('Rated 4.0', 'RATED\\n  Very good restaurant ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>Buffet</td>\n",
-       "      <td>Banashankari</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 url  \\\n",
-       "0  https://www.zomato.com/bangalore/jalsa-banasha...   \n",
-       "1  https://www.zomato.com/bangalore/spice-elephan...   \n",
-       "2  https://www.zomato.com/SanchurroBangalore?cont...   \n",
-       "3  https://www.zomato.com/bangalore/addhuri-udupi...   \n",
-       "4  https://www.zomato.com/bangalore/grand-village...   \n",
-       "\n",
-       "                                             address                   name  \\\n",
-       "0  942, 21st Main Road, 2nd Stage, Banashankari, ...                  Jalsa   \n",
-       "1  2nd Floor, 80 Feet Road, Near Big Bazaar, 6th ...         Spice Elephant   \n",
-       "2  1112, Next to KIMS Medical College, 17th Cross...        San Churro Cafe   \n",
-       "3  1st Floor, Annakuteera, 3rd Stage, Banashankar...  Addhuri Udupi Bhojana   \n",
-       "4  10, 3rd Floor, Lakshmi Associates, Gandhi Baza...          Grand Village   \n",
-       "\n",
-       "  online_order book_table   rate  votes                             phone  \\\n",
-       "0          Yes        Yes  4.1/5    775    080 42297555\\r\\n+91 9743772233   \n",
-       "1          Yes         No  4.1/5    787                      080 41714161   \n",
-       "2          Yes         No  3.8/5    918                    +91 9663487993   \n",
-       "3           No         No  3.7/5     88                    +91 9620009302   \n",
-       "4           No         No  3.8/5    166  +91 8026612447\\r\\n+91 9901210005   \n",
-       "\n",
-       "       location            rest_type  \\\n",
-       "0  Banashankari        Casual Dining   \n",
-       "1  Banashankari        Casual Dining   \n",
-       "2  Banashankari  Cafe, Casual Dining   \n",
-       "3  Banashankari          Quick Bites   \n",
-       "4  Basavanagudi        Casual Dining   \n",
-       "\n",
-       "                                          dish_liked  \\\n",
-       "0  Pasta, Lunch Buffet, Masala Papad, Paneer Laja...   \n",
-       "1  Momos, Lunch Buffet, Chocolate Nirvana, Thai G...   \n",
-       "2  Churros, Cannelloni, Minestrone Soup, Hot Choc...   \n",
-       "3                                        Masala Dosa   \n",
-       "4                                Panipuri, Gol Gappe   \n",
-       "\n",
-       "                         cuisines approx_cost(for two people)  \\\n",
-       "0  North Indian, Mughlai, Chinese                         800   \n",
-       "1     Chinese, North Indian, Thai                         800   \n",
-       "2          Cafe, Mexican, Italian                         800   \n",
-       "3      South Indian, North Indian                         300   \n",
-       "4        North Indian, Rajasthani                         600   \n",
-       "\n",
-       "                                        reviews_list menu_item  \\\n",
-       "0  [('Rated 4.0', 'RATED\\n  A beautiful place to ...        []   \n",
-       "1  [('Rated 4.0', 'RATED\\n  Had been here for din...        []   \n",
-       "2  [('Rated 3.0', \"RATED\\n  Ambience is not that ...        []   \n",
-       "3  [('Rated 4.0', \"RATED\\n  Great food and proper...        []   \n",
-       "4  [('Rated 4.0', 'RATED\\n  Very good restaurant ...        []   \n",
-       "\n",
-       "  listed_in(type) listed_in(city)  \n",
-       "0          Buffet    Banashankari  \n",
-       "1          Buffet    Banashankari  \n",
-       "2          Buffet    Banashankari  \n",
-       "3          Buffet    Banashankari  \n",
-       "4          Buffet    Banashankari  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ParserError",
+     "evalue": "Error tokenizing data. C error: EOF inside string starting at row 2480",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mParserError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-d5c137e5d65b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/zomato.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[1;32m    608\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwds_defaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    609\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 610\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    611\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    612\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    466\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    467\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 468\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    469\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    470\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   1055\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1056\u001b[0m         \u001b[0mnrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalidate_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nrows\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1057\u001b[0;31m         \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcol_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1058\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1059\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   2059\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2060\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2061\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2062\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2063\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_first_chunk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.read\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_low_memory\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mParserError\u001b[0m: Error tokenizing data. C error: EOF inside string starting at row 2480"
+     ]
     }
    ],
    "source": [
-    "df=pd.read_csv('F:/Data Science projects/EDA/zomato-bangalore-restaurants/zomato.csv')\n",
-    "df.head()"
+    "df = pd.read_csv('data/zomato.csv')\n",
+    "df.head(2)"
    ]
   },
   {
@@ -3023,7 +2844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
