--- a/4.zomatoRestaurants/Zomato_spatial.ipynb
+++ b/4.zomatoRestaurants/Zomato_spatial.ipynb
@@ -5,19 +5,35 @@
    "metadata": {},
    "source": [
     "## ZOMATO STORE SPATIAL ANALYSIS\n",
-    "- In this Spatial Data Analysis problem, we're going to analyse the [Zomato Food Delivery Store](https://www.zomato.com/ncr)"
+    "- In this Spatial Data Analysis problem, we're going to analyse the [Zomato Food Delivery Store](https://www.zomato.com/ncr) so as to increase their sales by covering larger market\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The basic idea of analyzing the Zomato dataset is to get a fair idea about the factors affecting the aggregate rating of each restaurant, establishment of different types of restaurant at different places, \n",
+    "Bengaluru being one such city has more than 12,000 restaurants with restaurants serving dishes from all over the world.\n",
+    "With each day new restaurants opening the industry has'nt been saturated yet and the demand is increasing day by day. \n",
+    "Inspite of increasing demand it however has become difficult for new restaurants to compete with established restaurants. Most of them serving the same food. \n",
+    "Bengaluru being an IT capital of India. Most of the people here are dependent mainly on the restaurant food as they don't have time to cook for themselves. \n",
+    "With such an overwhelming demand of restaurants it has therefore become important to study the demography of a location. What kind of a food is more popular in a locality. \n",
+    "Do the entire locality loves vegetarian food. If yes then is that locality populated by a particular sect of people for eg. Jain, Marwaris, Gujaratis who are mostly vegetarian. \n",
+    "These kind of analysis can be done using the data, by studying different factors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "from geopy.geocoders import Nominatim\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
     "\n",
     "### so that u dont have warnings\n",
     "from warnings import filterwarnings\n",
@@ -26,28 +42,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ParserError",
-     "evalue": "Error tokenizing data. C error: EOF inside string starting at row 2480",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mParserError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-d5c137e5d65b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/zomato.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[1;32m    608\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwds_defaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    609\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 610\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    611\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    612\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    466\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    467\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 468\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    469\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    470\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   1055\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1056\u001b[0m         \u001b[0mnrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalidate_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nrows\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1057\u001b[0;31m         \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcol_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1058\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1059\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   2059\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2060\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2061\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2062\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2063\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_first_chunk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.read\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_low_memory\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mParserError\u001b[0m: Error tokenizing data. C error: EOF inside string starting at row 2480"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "      <th>address</th>\n",
+       "      <th>name</th>\n",
+       "      <th>online_order</th>\n",
+       "      <th>book_table</th>\n",
+       "      <th>rate</th>\n",
+       "      <th>votes</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>location</th>\n",
+       "      <th>rest_type</th>\n",
+       "      <th>dish_liked</th>\n",
+       "      <th>cuisines</th>\n",
+       "      <th>approx_cost(for two people)</th>\n",
+       "      <th>reviews_list</th>\n",
+       "      <th>menu_item</th>\n",
+       "      <th>listed_in(type)</th>\n",
+       "      <th>listed_in(city)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://www.zomato.com/bangalore/jalsa-banasha...</td>\n",
+       "      <td>942, 21st Main Road, 2nd Stage, Banashankari, ...</td>\n",
+       "      <td>Jalsa</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>4.1/5</td>\n",
+       "      <td>775</td>\n",
+       "      <td>080 42297555\\r\\n+91 9743772233</td>\n",
+       "      <td>Banashankari</td>\n",
+       "      <td>Casual Dining</td>\n",
+       "      <td>Pasta, Lunch Buffet, Masala Papad, Paneer Laja...</td>\n",
+       "      <td>North Indian, Mughlai, Chinese</td>\n",
+       "      <td>800</td>\n",
+       "      <td>[('Rated 4.0', 'RATED\\n  A beautiful place to ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>Buffet</td>\n",
+       "      <td>Banashankari</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://www.zomato.com/bangalore/spice-elephan...</td>\n",
+       "      <td>2nd Floor, 80 Feet Road, Near Big Bazaar, 6th ...</td>\n",
+       "      <td>Spice Elephant</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4.1/5</td>\n",
+       "      <td>787</td>\n",
+       "      <td>080 41714161</td>\n",
+       "      <td>Banashankari</td>\n",
+       "      <td>Casual Dining</td>\n",
+       "      <td>Momos, Lunch Buffet, Chocolate Nirvana, Thai G...</td>\n",
+       "      <td>Chinese, North Indian, Thai</td>\n",
+       "      <td>800</td>\n",
+       "      <td>[('Rated 4.0', 'RATED\\n  Had been here for din...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>Buffet</td>\n",
+       "      <td>Banashankari</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 url  \\\n",
+       "0  https://www.zomato.com/bangalore/jalsa-banasha...   \n",
+       "1  https://www.zomato.com/bangalore/spice-elephan...   \n",
+       "\n",
+       "                                             address            name  \\\n",
+       "0  942, 21st Main Road, 2nd Stage, Banashankari, ...           Jalsa   \n",
+       "1  2nd Floor, 80 Feet Road, Near Big Bazaar, 6th ...  Spice Elephant   \n",
+       "\n",
+       "  online_order book_table   rate  votes                           phone  \\\n",
+       "0          Yes        Yes  4.1/5    775  080 42297555\\r\\n+91 9743772233   \n",
+       "1          Yes         No  4.1/5    787                    080 41714161   \n",
+       "\n",
+       "       location      rest_type  \\\n",
+       "0  Banashankari  Casual Dining   \n",
+       "1  Banashankari  Casual Dining   \n",
+       "\n",
+       "                                          dish_liked  \\\n",
+       "0  Pasta, Lunch Buffet, Masala Papad, Paneer Laja...   \n",
+       "1  Momos, Lunch Buffet, Chocolate Nirvana, Thai G...   \n",
+       "\n",
+       "                         cuisines approx_cost(for two people)  \\\n",
+       "0  North Indian, Mughlai, Chinese                         800   \n",
+       "1     Chinese, North Indian, Thai                         800   \n",
+       "\n",
+       "                                        reviews_list menu_item  \\\n",
+       "0  [('Rated 4.0', 'RATED\\n  A beautiful place to ...        []   \n",
+       "1  [('Rated 4.0', 'RATED\\n  Had been here for din...        []   \n",
+       "\n",
+       "  listed_in(type) listed_in(city)  \n",
+       "0          Buffet    Banashankari  \n",
+       "1          Buffet    Banashankari  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -56,9 +175,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Preprocessing:  Check if there is a Missing Values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -90,6 +218,13 @@
    ],
    "source": [
     "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drop All the missing Location Values for Spatial Analysis"
    ]
   },
   {
@@ -139,8 +274,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### After Removing the Non-Geo tagged columns, we have 93 uniquey geotagged "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +291,7 @@
        "93"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,16 +302,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "locations=pd.DataFrame({\"Name\":df['location'].unique()})"
+    "locations = pd.DataFrame({\"Name\":df['location'].unique()})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -217,62 +359,77 @@
        "      <th>4</th>\n",
        "      <td>Kumaraswamy Layout</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Rajarajeshwari Nagar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Vijay Nagar</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Name\n",
-       "0        Banashankari\n",
-       "1        Basavanagudi\n",
-       "2         Mysore Road\n",
-       "3           Jayanagar\n",
-       "4  Kumaraswamy Layout"
+       "                   Name\n",
+       "0          Banashankari\n",
+       "1          Basavanagudi\n",
+       "2           Mysore Road\n",
+       "3             Jayanagar\n",
+       "4    Kumaraswamy Layout\n",
+       "5  Rajarajeshwari Nagar\n",
+       "6           Vijay Nagar"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "locations.head()"
+    "locations.head(7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extracting Longitude and Latitude with Geopy from the Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: geopy in c:\\users\\mcr\\anaconda3\\lib\\site-packages (2.0.0)\n",
-      "Requirement already satisfied: geographiclib<2,>=1.49 in c:\\users\\mcr\\anaconda3\\lib\\site-packages (from geopy) (1.50)\n"
+      "Requirement already satisfied: geopy in /home/jacob/.local/lib/python3.8/site-packages (2.1.0)\n",
+      "Requirement already satisfied: geographiclib<2,>=1.49 in /home/jacob/.local/lib/python3.8/site-packages (from geopy) (1.50)\n"
      ]
     }
    ],
    "source": [
-    "!pip install geopy"
+    "!pip3 install geopy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [Nominatim](https://nominatim.org/) will help extract the x, y data from your data. You have to assign you user agent as app for this case"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from geopy.geocoders import Nominatim\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geolocator=Nominatim(user_agent=\"app\")"
+    "geolocator = Nominatim(user_agent=\"app\")"
    ]
   },
   {
