More documentation, getting better

--- a/4.zomatoRestaurants/Zomato_spatial.ipynb
+++ b/4.zomatoRestaurants/Zomato_spatial.ipynb
@@ -449,6 +449,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Create a new empty list of lat and long, in which we will append our extracted geodata using geocode from [geopy]()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
