modified the aguila part

--- a/8.Geohydrological Applications/3.PCRasters/GroundwaterInterpolation/MyGroundWaterLevel.ipynb
+++ b/8.Geohydrological Applications/3.PCRasters/GroundwaterInterpolation/MyGroundWaterLevel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "olympic-category",
+   "id": "wrapped-patio",
    "metadata": {},
    "source": [
     "#  Create a groundwater level map from borehole data and a DEM \n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "scenic-dallas",
+   "id": "coordinated-mobility",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ancient-slope",
+   "id": "italic-thumbnail",
    "metadata": {},
    "source": [
     "## 2. Convert a CSV file to PCRaster map format\n",
@@ -55,8 +55,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "mediterranean-bridge",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command = \"col2map -S -x 2 -y 3 -v 1 boreholesdxy.csv boreholedepth.map --clone clone.map\"\n",
+    "os.system(command)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "exceptional-patrol",
+   "metadata": {},
+   "source": [
+    "Read the `boreholedepth.map` file into the variable `BoreholeDepth`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "interesting-orlando",
+   "metadata": {},
+   "source": [
+    "### Visualise `BoreholeDepth` with Aguila. \n",
+    "* Since we run this Jupyter Notebook locally, we can use the `aguila` python operation. \n",
+    "* The map will popup in the background, so you might need to look for it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "identical-producer",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BoreholeDepth' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-43b62d679222>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maguila\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBoreholeDepth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'BoreholeDepth' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "aguila(BoreholeDepth)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "enabling-absolute",
+   "metadata": {},
+   "source": [
+    "## 3. Interpolate borehole depth with IDW\n",
+    "We can now interpolate the borehole depth at the pixels. We'll first apply the Inverse Distance Weighting method. This has been implemented as the [inversedistance operation](https://pcraster.geo.uu.nl/pcraster/4.3.0/documentation/pcraster_manual/sphinx/op_inversedistance.html) in PCRaster.\n",
+    "\n",
+    "The syntax is: \n",
+    "```Python\n",
+    "Result = inversedistance( mask, points, idp, radius, maxNr)\n",
+    "```\n",
+    "\n",
+    "Where \n",
+    "* <code>mask</code> is a mask of the extent that will be interpolated. In our case we'll use the clone map. \n",
+    "* <code>points</code> is the scalar raster layer with pixels that you want to interpolate. In our case <code>BoreholeDepth</code>.\n",
+    "* <code>idp</code> is the exponent of the power function for the weights. An <code>idp</code> value of 2 is commonly used.\n",
+    "* <code>radius</code> indicates the distance to a cell within it has to take interpolation points into account. If it's set to 0 there's no limitation.\n",
+    "* <code>maxNr</code> limits the number of points used for the interpolation. If it's set to 0 there's no maximum.\n",
+    "\n",
+    "Let's first read the clone map that we'll use as the mask."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bizarre-emergency",
+   "id": "funded-thesis",
    "metadata": {},
    "outputs": [],
    "source": []
