aguila plot BHoles

--- a/8.Geohydrological Applications/3.PCRasters/GroundwaterInterpolation/MyGroundWaterLevel.ipynb
+++ b/8.Geohydrological Applications/3.PCRasters/GroundwaterInterpolation/MyGroundWaterLevel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "wrapped-patio",
+   "id": "killing-enlargement",
    "metadata": {},
    "source": [
     "#  Create a groundwater level map from borehole data and a DEM \n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "coordinated-mobility",
+   "id": "early-verse",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "italic-thumbnail",
+   "id": "undefined-singer",
    "metadata": {},
    "source": [
     "## 2. Convert a CSV file to PCRaster map format\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "mediterranean-bridge",
+   "id": "progressive-walter",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exceptional-patrol",
+   "id": "promotional-preserve",
    "metadata": {},
    "source": [
     "Read the `boreholedepth.map` file into the variable `BoreholeDepth`."
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interesting-orlando",
+   "id": "adequate-adaptation",
    "metadata": {},
    "source": [
     "### Visualise `BoreholeDepth` with Aguila. \n",
@@ -95,29 +95,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "identical-producer",
+   "execution_count": 6,
+   "id": "federal-meaning",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'BoreholeDepth' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-43b62d679222>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maguila\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBoreholeDepth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'BoreholeDepth' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "BoreholeDepth = readmap(\"boreholedepth.map\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "tropical-ireland",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "aguila(BoreholeDepth)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "enabling-absolute",
+   "id": "billion-expert",
    "metadata": {},
    "source": [
     "## 3. Interpolate borehole depth with IDW\n",
@@ -140,8 +138,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "dental-keyboard",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Mask = readmap(\"clone.map\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "controlling-compilation",
+   "metadata": {},
+   "source": [
+    "Now we interpolate the borehole depths with IDW using the following line:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "technological-pleasure",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BoreholeDepthIDW = inversedistance( Mask, BoreholeDepth, 2, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "minute-nickel",
+   "metadata": {},
+   "source": [
+    "Let's visualise the result with Aguila."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "collected-recognition",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aguila(BoreholeDepthIDW)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "funded-thesis",
+   "id": "respiratory-certification",
    "metadata": {},
    "outputs": [],
    "source": []
