aguila plot BHoles depths

--- a/8.Geohydrological Applications/3.PCRasters/GroundwaterInterpolation/MyGroundWaterLevel.ipynb
+++ b/8.Geohydrological Applications/3.PCRasters/GroundwaterInterpolation/MyGroundWaterLevel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "native-attack",
+   "id": "otherwise-lloyd",
    "metadata": {},
    "source": [
     "#  Create a groundwater level map from borehole data and a DEM \n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "municipal-donor",
+   "id": "whole-degree",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reported-roman",
+   "id": "american-swedish",
    "metadata": {},
    "source": [
     "## 2. Convert a CSV file to PCRaster map format\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "genuine-separation",
+   "id": "complimentary-liberty",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "retired-polyester",
+   "id": "incorrect-contents",
    "metadata": {},
    "source": [
     "Read the `boreholedepth.map` file into the variable `BoreholeDepth`."
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "weekly-scholar",
+   "id": "national-border",
    "metadata": {},
    "source": [
     "### Visualise `BoreholeDepth` with Aguila. \n",
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "clinical-filing",
+   "id": "suburban-permission",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "organized-internship",
+   "id": "other-desert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lesbian-tablet",
+   "id": "compound-worse",
    "metadata": {},
    "source": [
     "## 3. Interpolate borehole depth with IDW\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "velvet-mother",
+   "id": "covered-robert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dangerous-japanese",
+   "id": "formed-category",
    "metadata": {},
    "source": [
     "Now we interpolate the borehole depths with IDW using the following line:"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "frequent-patch",
+   "id": "typical-hollywood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excited-radius",
+   "id": "powerful-rhythm",
    "metadata": {},
    "source": [
     "Let's visualise the result with Aguila."
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "stretch-upgrade",
+   "id": "handed-tower",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conceptual-status",
+   "id": "former-moses",
    "metadata": {},
    "source": [
     "## 4. Interpolate borehole depth with Thiessen polygons\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "supported-fiber",
+   "id": "elementary-stability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corrected-subscriber",
+   "id": "concerned-kingston",
    "metadata": {},
    "source": [
     "Check the result with Aguila."
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "serious-mongolia",
+   "id": "embedded-venezuela",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "differential-texture",
+   "id": "relative-holly",
    "metadata": {},
    "source": [
     "Now we assign a unique ID to each boolean True cell. \n",
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "obvious-meter",
+   "id": "minimal-helicopter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "willing-thriller",
+   "id": "joined-there",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spread-namibia",
+   "id": "current-compiler",
    "metadata": {},
    "source": [
     "Let's assign to each cell its closes borehole ID. We use the <code>spreadzone</code> operation, which has the following syntax:\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "expected-objective",
+   "id": "orange-privilege",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "electrical-import",
+   "id": "special-manhattan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,9 +298,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "sapphire-screw",
+   "metadata": {},
+   "source": [
+    "The final step is to assign the groundwater depth values of the boreholes to the Thiessen polygons.\n",
+    "We can do that by calculating the minimum or maximum depth per class, which will just extrapolate the value to the whole class. Here we'll use <code>areamaximum</code>:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "parliamentary-brick",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BoreholeDepthThiessen = areamaximum(BoreholeDepth,ThiessenID)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "widespread-lewis",
+   "metadata": {},
+   "source": [
+    "Check the result and compare it with the IDW interpolation using Aguila."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "infectious-above",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aguila(BoreholeDepthIDW,BoreholeDepthThiessen)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deadly-march",
+   "id": "anonymous-first",
    "metadata": {},
    "outputs": [],
    "source": []
